--- a/src/components/TextField/TextField.module.scss
+++ b/src/components/TextField/TextField.module.scss
@@ -65,9 +65,9 @@
   background-color: transparent;
   border: 1px solid;
   @include theme-prop(border-color, ui-border-color);
-  border-radius: $border-radius-small;
+  border-radius: var(--border-radius-small);
   transition: border-color var(--motion-productive-medium) ease-in;
-  padding: $spacing-small $spacing-medium;
+  padding: var(--spacing-small) var(--spacing-medium);
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -90,7 +90,7 @@
 }
 
 .textField .inputWrapper .input.inputHasIcon {
-  padding: $spacing-small $spacing-large $spacing-small $spacing-medium;
+  padding: var(--spacing-small) var(--spacing-large) var(--spacing-small) var(--spacing-medium);
 }
 
 .textField .inputWrapper .input.round {
@@ -105,7 +105,7 @@
   border-left: none;
   border-right: none;
   border-top: none;
-  padding: $spacing-small $spacing-large $spacing-small $spacing-xs;
+  padding: var(--spacing-small) var(--spacing-large) var(--spacing-small) var(--spacing-xs);
   border-radius: 0 !important;
 }
 
@@ -119,7 +119,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: $border-radius-small;
+  border-radius: var(--border-radius-small);
   opacity: 0;
   pointer-events: none;
 }
@@ -225,7 +225,7 @@
 }
 
 .textField .inputWrapper.inputWrapperSizeSmall .input.inputHasIcon.onlyUnderline {
-  padding-left: $spacing-xs;
+  padding-left: var(--spacing-xs);
 }
 
 .textField .inputWrapper.wrapperSizeMedium {
@@ -238,7 +238,7 @@
 }
 
 .textField .inputWrapper.wrapperSizeMedium .input.inputHasIcon {
-  padding: $spacing-small $spacing-xl $spacing-small $spacing-medium;
+  padding: var(--spacing-small) var(--spacing-xl) var(--spacing-small) var(--spacing-medium);
 }
 
 .textField .inputWrapper.wrapperSizeMedium .input.inputHasIcon.onlyUnderline {
@@ -270,11 +270,11 @@
 }
 
 .textField .inputWrapper.wrapperSizeLarge .input.inputHasIcon {
-  padding: $spacing-small $spacing-xl $spacing-small $spacing-medium;
+  padding: var(--spacing-small) var(--spacing-xl) var(--spacing-small) var(--spacing-medium);
 }
 
 .textField .inputWrapper.wrapperSizeLarge .input.inputHasIcon.onlyUnderline {
-  padding-left: $spacing-xs;
+  padding-left: var(--spacing-xs);
 }
 
 .textField .inputWrapper.wrapperSizeLarge .iconContainer {
