Heading API changes (#1440)

--- a/src/components/LegacyHeading/LegacyHeading.module.scss
+++ b/src/components/LegacyHeading/LegacyHeading.module.scss
@@ -2,6 +2,9 @@
 @import "../../styles/typography";
 @import "../../styles/global-css-settings";
 
+@include create-title-classes;
+@include create-text-classes;
+
 .headingComponent {
   border: 1px solid transparent;
   border-radius: var(--border-radius-small);
@@ -28,20 +31,17 @@
 /* Override tags styles */
 
 .elementTypeH1 {
-  @include vibe-title("h1", "normal");
-  letter-spacing: 0.5px !important;
+  @include vibe-heading("h1", "normal");
 }
 
 .elementTypeH2.sizeLarge,
 .elementTypeH1.sizeSmall,
 .elementTypeH1.sizeMedium {
-  @include vibe-title("h2", "normal");
-  letter-spacing: 0.1px !important;
+  @include vibe-heading("h2", "normal");
 }
 
 .elementTypeH3.sizeLarge {
-  @include vibe-title("h2", "light");
-  letter-spacing: 0.1px !important;
+  @include vibe-heading("h2", "light");
 }
 
 .elementTypeH2.sizeSmall,
@@ -49,16 +49,15 @@
 .elementTypeH3.sizeSmall,
 .elementTypeH3.sizeMedium,
 .elementTypeH4 {
-  @include vibe-title("h3", "normal");
-  letter-spacing: 0.1px !important;
+  @include vibe-heading("h3", "normal");
 }
 
 .elementTypeH5, .elementTypeP {
-  @include vibe-text("medium", "normal");
+  @include vibe-heading("medium", "normal");
 }
 
 .elementTypeH6 {
-  @include vibe-text("small", "normal");
+  @include vibe-heading("small", "normal");
 }
 
 .elementTypeSmall {
