--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -93,7 +93,7 @@ $disabled-on-primary-color-opacity: 0.5;
 
 .sizeXxs {
   @include smoothing-text;
-  @include vibe-text(small, normal);
+  @include vibe-text(text2, normal);
   padding: 2px var(--spacing-xs);
   height: 16px;
   line-height: 16px;
@@ -101,7 +101,7 @@ $disabled-on-primary-color-opacity: 0.5;
 
 .sizeXs {
   @include smoothing-text;
-  @include vibe-text(small, normal);
+  @include vibe-text(text2, normal);
   padding: var(--spacing-xs) var(--spacing-small);
   height: 24px;
   line-height: 21px;
@@ -109,7 +109,7 @@ $disabled-on-primary-color-opacity: 0.5;
 
 .sizeSmall {
   @include smoothing-text;
-  @include vibe-text(small, normal);
+  @include vibe-text(text2, normal);
   padding: var(--spacing-xs) var(--spacing-small);
   height: 32px;
   line-height: 24px;
@@ -121,14 +121,14 @@ $disabled-on-primary-color-opacity: 0.5;
 
 .sizeMedium {
   @include smoothing-text;
-  @include vibe-text(medium, normal);
+  @include vibe-text(text1, normal);
   padding: var(--spacing-small) var(--spacing-medium);
   height: 40px;
 }
 
 .sizeLarge {
   @include smoothing-text;
-  @include vibe-text(medium, normal);
+  @include vibe-text(text1, normal);
   padding: 12px var(--spacing-large);
   height: 48px;
 }
