--- a/src/components/Icon/__stories__/Icon.stories.scss
+++ b/src/components/Icon/__stories__/Icon.stories.scss
@@ -35,7 +35,7 @@
 
 .icon-story-description {
   margin: var(--spacing-large) 0;
-  @include vibe-text(medium, bold);
+  @include vibe-text(text1, medium);
 }
 
 .icon-story-custom-icon {
