Partially revert "chore: Cleanup internal css variables (#1474)" - keep only changes related to components variables usage

--- a/src/components/GridKeyboardNavigationContext/__stories__/useGridKeyboardNavigationContext.stories.scss
+++ b/src/components/GridKeyboardNavigationContext/__stories__/useGridKeyboardNavigationContext.stories.scss
@@ -17,7 +17,7 @@
 
 .use-grid-keyboard-dummy-grid-item {
   width: 60px;
-  margin: 6px;
+  margin: $spacing-xs-small;
 
   &.active-item {
     @include focus-style-css();
