--- a/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-sizes.scss
+++ b/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-sizes.scss
@@ -1,8 +1,8 @@
 @import "../../../../styles/global-css-settings";
 @import "../../../styles/content-spacing";
 
-$spacing-grid-column-gap: var(--spacing-small);
-$spacing-grid-row-gap: var(--spacing-xl);
+$spacing-grid-column-gap: $spacing-small;
+$spacing-grid-row-gap: $spacing-xl;
 $spacing-cell-min-width: $grid-auto-fit-cell-width-small;
 $spacing-grid-cell-array-calc: calc(12.5% - #{$spacing-grid-column-gap});
 
