--- a/src/storybook/stand-alone-documentaion/welcome/principle/principle.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/principle/principle.scss
@@ -4,7 +4,7 @@
 .monday-storybook-principle {
   &_visual-element {
     background-color: var(--color-indigo);
-    border-radius: var(--border-radius-small);
+    border-radius: $border-radius-small;
     width: 100%;
     height: 174px;
     display: flex;
