Api changes/hadas/next (#1475)

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -73,14 +73,8 @@ $headingClasses: (
 );
 
 $textClasses: (
-  "text1": (
-    "bold",
-    "medium", "normal"
-  ),
-  "text2": (
-    "bold",
-    "medium", "normal"
-  )
+    "text1": ("bold", "medium", "normal"),
+    "text2": ("bold", "medium", "normal")
 );
 
 @mixin base-font($font-variable) {
