Remove content-spacing.scss, replace with sb variables

--- a/src/storybook/stand-alone-documentaion/round-corners/corners-settings/corner-settings.scss
+++ b/src/storybook/stand-alone-documentaion/round-corners/corners-settings/corner-settings.scss
@@ -2,10 +2,9 @@
 @import "../../../../styles/themes";
 @import "../../../../styles/typography";
 @import "../../../../styles/global-css-settings";
-@import "../../../styles/content-spacing";
 
 .global-settings-general-component {
-  margin-top: $spacing-between-section-items;
+  margin-top: var(--sb-spacing-between-section-items);
   .global-settings-list {
     .global-settings-list-header {
       @include vibe-text(text1, bold);
