--- a/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-sizes.scss
+++ b/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-sizes.scss
@@ -1,5 +1,4 @@
 @import "../../../../styles/global-css-settings";
-@import "../../../styles/content-spacing";
 
 $spacing-grid-column-gap: var(--spacing-small);
 $spacing-grid-row-gap: var(--spacing-xl);
@@ -7,7 +6,7 @@ $spacing-cell-min-width: $grid-auto-fit-cell-width-small;
 $spacing-grid-cell-array-calc: calc(12.5% - #{$spacing-grid-column-gap});
 
 .monday-storybook-spacing-sizes {
-  margin: $spacing-between-section-items 0;
+  margin: var(--sb-spacing-between-section-items) 0;
 
   > * {
     margin-right: auto;
@@ -15,8 +14,9 @@ $spacing-grid-cell-array-calc: calc(12.5% - #{$spacing-grid-column-gap});
   }
 
   @include grid-auto-fit(
-          $grid-column-gap: $spacing-grid-column-gap,
-          $grid-row-gap: $spacing-grid-row-gap,
-          $grid-cell-min-width: $spacing-cell-min-width,
-          $grid-cell-array-calc: $spacing-grid-cell-array-calc);
+    $grid-column-gap: $spacing-grid-column-gap,
+    $grid-row-gap: $spacing-grid-row-gap,
+    $grid-cell-min-width: $spacing-cell-min-width,
+    $grid-cell-array-calc: $spacing-grid-cell-array-calc
+  );
 }
