--- a/src/storybook/stand-alone-documentaion/welcome/abilities-description/abilities-description.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/abilities-description/abilities-description.scss
@@ -1,15 +1,15 @@
 @import "../../../../styles/global-css-settings";
-@import "../../../styles/content-spacing";
 
 $abilities-cell-min-width: $grid-auto-fit-cell-width-medium;
 $abilities-grid-gap: var(--spacing-large);
 $abilities-grid-cell-array-calc: calc(33.3% - #{$abilities-grid-gap});
 
 .monday-storybook-abilities-description {
-  margin-top: $spacing-between-section-items;
+  margin-top: var(--sb-spacing-between-section-items);
 
   @include grid-auto-fit(
-          $grid-gap: $abilities-grid-gap,
-          $grid-cell-min-width: $abilities-cell-min-width,
-          $grid-cell-array-calc: $abilities-grid-cell-array-calc);
+    $grid-gap: $abilities-grid-gap,
+    $grid-cell-min-width: $abilities-cell-min-width,
+    $grid-cell-array-calc: $abilities-grid-cell-array-calc
+  );
 }
