--- a/src/storybook/components/tip/tip.scss
+++ b/src/storybook/components/tip/tip.scss
@@ -1,5 +1,4 @@
-@import "../../styles/content-spacing";
 .monday-storybook-tip {
   width: 100%;
-  margin: $spacing-between-section-items 0;
+  margin: var(--sb-spacing-between-section-items) 0;
 }
