--- a/src/storybook/stand-alone-documentaion/welcome/contributors/contributors.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/contributors/contributors.scss
@@ -1,5 +1,4 @@
 @import "../../../../styles/global-css-settings";
-@import "../../../styles/content-spacing";
 
 $contributor-cell-min-width: $grid-auto-fit-cell-width-xl;
 $contributor-grid-column-gap: var(--spacing-large);
@@ -10,10 +9,11 @@ $contributor-grid-cell-array-calc: calc(33.3% - #{$contributor-grid-column-gap})
   margin-top: 68px;
 
   @include grid-auto-fit(
-          $grid-column-gap: $contributor-grid-column-gap,
-          $grid-row-gap: $contributor-grid-row-gap,
-          $grid-cell-min-width: $contributor-cell-min-width,
-          $grid-cell-array-calc: $contributor-grid-cell-array-calc);
+    $grid-column-gap: $contributor-grid-column-gap,
+    $grid-row-gap: $contributor-grid-row-gap,
+    $grid-cell-min-width: $contributor-cell-min-width,
+    $grid-cell-array-calc: $contributor-grid-cell-array-calc
+  );
 
   &_contributor {
     &--bg-pattern-1 {
@@ -36,5 +36,4 @@ $contributor-grid-cell-array-calc: calc(33.3% - #{$contributor-grid-column-gap})
       background-image: url("../assets/BackgroundPattern5.png");
     }
   }
-
 }
