--- a/src/storybook/styles/typography.scss
+++ b/src/storybook/styles/typography.scss
@@ -1,5 +1,4 @@
 @import "../../styles/global-css-settings";
-@import "./content-spacing";
 
 // font family
 $header-primary-font: var(--title-font-family);
@@ -43,8 +42,8 @@ $text-line-height: 24px;
   @include small-text-without-color;
 }
 
-@mixin title-appearance{
-  margin-bottom: $spacing-between-title-to-content;
+@mixin title-appearance {
+  margin-bottom: var(--sb-spacing-between-title-to-content);
   font-family: $header-primary-font;
   @include basic-text;
   font-size: $h3-font-size;
