--- a/src/storybook/stand-alone-documentaion/welcome/other-contributors-list/other-contributors-list.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/other-contributors-list/other-contributors-list.scss
@@ -1,9 +1,9 @@
-@import "../../../styles/typography";
+@import "~vibe-storybook-components/dist/mixins";
 
 .monday-other-contributors-list {
   margin-top: var(--sb-spacing-between-section-items);
   &_contributor:after {
-    @include small-text;
+    @include sb-small-text;
     content: ",";
   }
 }
