--- a/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-component/spacing-component.scss
+++ b/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-component/spacing-component.scss
@@ -1,5 +1,4 @@
 @import "../../../../../styles/themes";
-@import "../../../../styles/typography";
 
 .spacing-xs {
   height: var(--spacing-xs);
@@ -47,7 +46,7 @@
     justify-content: center;
     padding: var(--spacing-medium) var(--spacing-xs) var(--spacing-medium) var(--spacing-xs);
     color: var(--primary-text-color);
-    font-size: $small-text-font-size;
+    font-size: var(--sb-small-text-font-size);
   }
 
   &_description {
