Replace spacing tokens in storybook components & stand-alone-docs

--- a/src/storybook/components/related-components/descriptions/clickable-description/clickable-description.stories.module.scss
+++ b/src/storybook/components/related-components/descriptions/clickable-description/clickable-description.stories.module.scss
@@ -1,5 +1,5 @@
 .clickable-description {
-  padding: var(--spacing-small);
+  padding: var(--sb-spacing-small);
   border-radius: var(--border-radius-small);
   background-color: var(--primary-selected-color);
   color: var(--primary-text-color);
