--- a/src/storybook/stand-alone-documentaion/shadow/card-shadow-example/card-shadow-example.module.scss
+++ b/src/storybook/stand-alone-documentaion/shadow/card-shadow-example/card-shadow-example.module.scss
@@ -9,7 +9,7 @@
     border-radius: 8px;
     display: flex;
     flex-direction: column;
-    padding: var(--spacing-medium);
+    padding: var(--sb-spacing-medium);
     cursor: pointer;
 
     &:hover {
@@ -18,7 +18,7 @@
 
 
   &-title {
-    margin-top: var(--spacing-medium);
+    margin-top: var(--sb-spacing-medium);
     margin-bottom: 0;
     font-size: 18px;
     font-weight: 700;
@@ -26,12 +26,12 @@
   }
 
   &-description {
-    margin-top: var(--spacing-small);
+    margin-top: var(--sb-spacing-small);
     font-size: 14px;
     line-height: 18px;
   }
 
   &-button {
-    margin-top: var(--spacing-large);
+    margin-top: var(--sb-spacing-large);
   }
 }
