--- a/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-sizes.scss
+++ b/src/storybook/stand-alone-documentaion/spacing/spacing-sizes/spacing-sizes.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/global-css-settings";
 
-$spacing-grid-column-gap: var(--spacing-small);
-$spacing-grid-row-gap: var(--spacing-xl);
+$spacing-grid-column-gap: var(--sb-spacing-small);
+$spacing-grid-row-gap: var(--sb-spacing-xl);
 $spacing-cell-min-width: $grid-auto-fit-cell-width-small;
 $spacing-grid-cell-array-calc: calc(12.5% - #{$spacing-grid-column-gap});
 
