--- a/src/storybook/stand-alone-documentaion/typography-new/text-styles/text-styles.module.scss
+++ b/src/storybook/stand-alone-documentaion/typography-new/text-styles/text-styles.module.scss
@@ -7,6 +7,6 @@
 
 
 .visualExample {
-  margin: var(--spacing-large) var(--spacing-large) var(--spacing-large) 0;
+  margin: var(--sb-spacing-large) var(--sb-spacing-large) var(--sb-spacing-large) 0;
   text-align: center;
 }
