--- a/src/storybook/components/related-components/descriptions/shadow-description/shadow-description.module.scss
+++ b/src/storybook/components/related-components/descriptions/shadow-description/shadow-description.module.scss
@@ -4,7 +4,7 @@
   width: 40px;
   height: 40px;
   @include theme-prop(background-color, primary-background-color);
-  margin: 0 var(--spacing-small);
+  margin: 0 var(--sb-spacing-small);
 }
 
 .small-shadow {
