--- a/src/storybook/stand-alone-documentaion/shadow/shadow-levels/shadow-levels.scss
+++ b/src/storybook/stand-alone-documentaion/shadow/shadow-levels/shadow-levels.scss
@@ -1,7 +1,7 @@
 @import "../../../../styles/global-css-settings";
 
-$shadow-level-grid-column-gap: var(--spacing-large);
-$shadow-level-grid-row-gap: var(--spacing-xl);
+$shadow-level-grid-column-gap: var(--sb-spacing-large);
+$shadow-level-grid-row-gap: var(--sb-spacing-xl);
 $shadow-level-cell-min-width: $grid-auto-fit-cell-width-medium;
 $shadow-level-grid-cell-array-calc: calc(25% - #{$shadow-level-grid-column-gap});
 
