--- a/src/storybook/components/related-components/descriptions/spacing-description/spacing-description.module.scss
+++ b/src/storybook/components/related-components/descriptions/spacing-description/spacing-description.module.scss
@@ -8,7 +8,7 @@
   & > * {
     margin: var(--sb-spacing-medium);
     width: 40px;
-    @include theme-prop(background-color, negative-color-selected);
+    background-color: var(--negative-color-selected);
   }
 
   .small-spacing-visual-element {
