--- a/src/storybook/stand-alone-documentaion/shadow/card-shadow-example/card-shadow-example.module.scss
+++ b/src/storybook/stand-alone-documentaion/shadow/card-shadow-example/card-shadow-example.module.scss
@@ -1,21 +1,19 @@
-@import "../../../../styles/themes";
 @import "../../../../styles/global-css-settings";
 
 .card-shadow-example {
-    border: 1px solid;
-    @include theme-prop(border-color, layout-border-color);
-    height: 317px;
-    width: 296px;
-    border-radius: 8px;
-    display: flex;
-    flex-direction: column;
-    padding: var(--sb-spacing-medium);
-    cursor: pointer;
+  border: 1px solid;
+  border-color: var(--sb-layout-border-color);
+  height: 317px;
+  width: 296px;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  padding: var(--sb-spacing-medium);
+  cursor: pointer;
 
-    &:hover {
-      @include box-shadow-medium;
-    }
-
+  &:hover {
+    @include box-shadow-medium;
+  }
 
   &-title {
     margin-top: var(--sb-spacing-medium);
