--- a/src/storybook/stand-alone-documentaion/shadow/drag-shadow-example/drag-shadow-example.module.scss
+++ b/src/storybook/stand-alone-documentaion/shadow/drag-shadow-example/drag-shadow-example.module.scss
@@ -14,7 +14,7 @@
     align-items: center;
     margin-left: var(--sb-spacing-xs);
     border: 1px solid;
-    @include theme-prop(border-color, layout-border-color);
+    border-color: var(--layout-border-color);
     border-radius: var(--border-radius-small);
     padding: var(--sb-spacing-small);
     width: 234px;
