Replace border-radius variables with sb variables

--- a/src/storybook/stand-alone-documentaion/round-corners/rounded-corner/rounded-corner.module.scss
+++ b/src/storybook/stand-alone-documentaion/round-corners/rounded-corner/rounded-corner.module.scss
@@ -16,14 +16,14 @@
   margin: 0 var(--sb-spacing-medium) var(--sb-spacing-large);
 
   &--small {
-    border-radius: var(--border-radius-small);
+    border-radius: var(--sb-border-radius-small);
   }
 
   &--medium {
-    border-radius: var(--border-radius-medium);
+    border-radius: var(--sb-border-radius-medium);
   }
 
   &--big {
-    border-radius: var(--border-radius-big);
+    border-radius: var(--sb-border-radius-big);
   }
 }
