--- a/src/storybook/stand-alone-documentaion/shadow/drag-shadow-example/drag-shadow-example.module.scss
+++ b/src/storybook/stand-alone-documentaion/shadow/drag-shadow-example/drag-shadow-example.module.scss
@@ -15,7 +15,7 @@
     margin-left: var(--sb-spacing-xs);
     border: 1px solid;
     border-color: var(--layout-border-color);
-    border-radius: var(--border-radius-small);
+    border-radius: var(--sb-border-radius-small);
     padding: var(--sb-spacing-small);
     width: 234px;
     height: 37px;
