--- a/src/storybook/components/related-components/descriptions/clickable-description/clickable-description.stories.module.scss
+++ b/src/storybook/components/related-components/descriptions/clickable-description/clickable-description.stories.module.scss
@@ -1,6 +1,6 @@
 .clickable-description {
   padding: var(--sb-spacing-small);
-  border-radius: var(--border-radius-small);
+  border-radius: var(--sb-border-radius-small);
   background-color: var(--primary-selected-color);
   color: var(--primary-text-color);
   width: 40%;
