--- a/src/storybook/stand-alone-documentaion/welcome/contributor/contributor.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/contributor/contributor.scss
@@ -5,7 +5,7 @@
     position: relative;
     width: 100%;
     height: 182px;
-    border-radius: var(--border-radius-small);
+    border-radius: var(--sb-border-radius-small);
     background-repeat: no-repeat;
     background-size: cover;
   }
