--- a/src/storybook/stand-alone-documentaion/welcome/principle/principle.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/principle/principle.scss
@@ -3,7 +3,7 @@
 .monday-storybook-principle {
   &_visual-element {
     background-color: var(--color-indigo);
-    border-radius: var(--border-radius-small);
+    border-radius: var(--sb-border-radius-small);
     width: 100%;
     height: 174px;
     display: flex;
