Replace storybook color tokens with sb tokens

--- a/src/storybook/components/related-components/descriptions/colors-description/colors-description.scss
+++ b/src/storybook/components/related-components/descriptions/colors-description/colors-description.scss
@@ -10,15 +10,15 @@
     width: 48px;
 
     &:first-child {
-      background-color: var(--primary-color);
+      background-color: var(--sb-primary-color);
     }
 
     &:nth-child(2) {
-      background-color: var(--primary-hover-color);
+      background-color: var(--sb-primary-hover-color);
     }
 
     &:last-child {
-      background-color: var(--primary-selected-color);
+      background-color: var(--sb-primary-selected-color);
     }
   }
 }
