--- a/src/components/Combobox/components/ComboboxCategory/ComboboxCategory.module.scss
+++ b/src/components/Combobox/components/ComboboxCategory/ComboboxCategory.module.scss
@@ -3,7 +3,7 @@
 @import "../../../../styles/states";
 
 .comboboxCategory {
-  @include theme-prop(color, placeholder-color);
+  color: var(--placeholder-color);
   display: flex;
   align-items: center;
   padding-top: var(--spacing-small);
