--- a/src/components/Tabs/__stories__/tabs.stories.scss
+++ b/src/components/Tabs/__stories__/tabs.stories.scss
@@ -11,7 +11,7 @@
     width: 480px;
     height: 111px;
     margin-left: 40px;
-    @include theme-prop(background-color, disabled-background-color);
+    background-color: var(--disabled-background-color);
     padding: 16px;
   }
 
