--- a/src/components/Tipseen/__stories__/tipseen.stories.scss
+++ b/src/components/Tipseen/__stories__/tipseen.stories.scss
@@ -62,6 +62,6 @@ $component-rules-grid-cell-array-calc: calc(50% - #{$tipseen-rules-cell-min-widt
   }
 
   &_hovered {
-    @include theme-prop(background-color, primary-selected-color);
+    background-color: var(--primary-selected-color);
   }
 }
