--- a/src/components/Accordion/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion/Accordion.module.scss
@@ -14,7 +14,7 @@
   border-top: none;
   border-left: none;
   border-right: none;
-  @include theme-prop(border-color, ui-border-color);
+  border-color: var(--ui-border-color);
 }
 
 .accordion .accordionItemExpandCollapseLast {
