--- a/src/components/AlertBanner/__stories__/alertBanner.stories.scss
+++ b/src/components/AlertBanner/__stories__/alertBanner.stories.scss
@@ -21,13 +21,13 @@
 
   &_pink {
     .monday-alert-banner__close-button-wrapper {
-      @include theme-prop(background, private-color);
+      background: var(--private-color);
     }
     .monday-alert-banner__inner {
-      @include theme-prop(background, private-color);
+      background: var(--private-color);
     }
     .monday-alert-banner__alert-banner-close-btn {
-      @include theme-prop(background, private-color);
+      background: var(--private-color);
     }
   }
 }
