--- a/src/components/AttentionBox/AttentionBox.module.scss
+++ b/src/components/AttentionBox/AttentionBox.module.scss
@@ -9,7 +9,7 @@
   width: fit-content;
   max-width: 100%;
   height: fit-content;
-  @include theme-prop(color, dark-color);
+  color: var(--color-mud_black);
 }
 
 .title {
@@ -20,30 +20,30 @@
 
 .text,
 .titleContainer {
-  @include theme-prop(color, primary-text-color);
+  color: var(--primary-text-color);
 }
 
 .typePrimary {
-  @include theme-prop(color, primary-text-color);
-  @include theme-prop(background-color, primary-selected-color);
+  color: var(--primary-text-color);
+  background-color: var(--primary-selected-color);
 }
 
 .typeDanger {
-  @include theme-prop(background-color, negative-color-selected);
+  background-color: var(--negative-color-selected);
 }
 
 .typeSuccess {
-  @include theme-prop(background-color, positive-color-selected);
+  background-color: var(--positive-color-selected);
 }
 
 .typeDark {
-  @include theme-prop(background-color, primary-background-hover-color);
-  @include theme-prop(color, primary-text-color);
+  background-color: var(--primary-background-hover-color);
+  color: var(--primary-text-color);
 }
 
 .typeWarning {
-  @include theme-prop(background-color, warning-color-selected);
-  @include theme-prop(color, primary-text-color);
+  background-color: var(--warning-color-selected);
+  color: var(--primary-text-color);
 }
 
 .titleContainer {
