--- a/src/components/AttentionBox/__stories__/attentionBox.stories.scss
+++ b/src/components/AttentionBox/__stories__/attentionBox.stories.scss
@@ -81,7 +81,7 @@
     font-size: 14px;
 
     span {
-      @include theme-prop(color, secondary-text-color);
+      color: var(--secondary-text-color);
     }
   }
 
