--- a/src/components/Badge/Badge.module.scss
+++ b/src/components/Badge/Badge.module.scss
@@ -8,9 +8,9 @@ $embeddedPosition: 15%;
   .badge {
     z-index: 1;
     position: absolute;
-    border: 2px solid transparent;
+    border: 2px solid;
     border-radius: 16px;
-    @include theme-prop(border-color, primary-background-color);
+    border-color: var(--primary-background-color);
 
     &.topEnd {
       &.rectangular {
