--- a/src/components/BreadcrumbsBar/BreadcrumbsBar.module.scss
+++ b/src/components/BreadcrumbsBar/BreadcrumbsBar.module.scss
@@ -8,6 +8,6 @@
 }
 
 .breadcrumbsBar ol .separatorIcon {
-  @include theme-prop(color, secondary-text-color);
+  color: var(--secondary-text-color);
   flex-shrink: 0;
 }
