--- a/src/components/ColorPicker/components/ColorPickerItemComponent/ColorPickerItemComponent.module.scss
+++ b/src/components/ColorPicker/components/ColorPickerItemComponent/ColorPickerItemComponent.module.scss
@@ -17,7 +17,8 @@
   border-radius: calc($border-radius * var(--border-radius-multiplier, 1));
   inset: $inset;
   border: $border-width solid;
-  @include theme-prop(border-color, $border-color-var-name);
+  // TODO check
+  border-color: var(--#{$border-color-var-name});
   pointer-events: none;
 }
 
