--- a/src/components/Counter/Counter.module.scss
+++ b/src/components/Counter/Counter.module.scss
@@ -57,15 +57,15 @@
 }
 
 .kindLine.colorPrimary {
-  @include theme-prop(color, primary-color);
+  color: var(--primary-color);
 }
 
 .kindLine.colorDark {
-  @include theme-prop(color, inverted-color-background);
+  color: var(--inverted-color-background);
 }
 
 .kindLine.colorNegative {
-  @include theme-prop(color, negative-color);
+  color: var(--negative-color);
 }
 
 .kindLine.colorLight {
