--- a/src/components/Divider/Divider.module.scss
+++ b/src/components/Divider/Divider.module.scss
@@ -3,7 +3,7 @@
 @import "../../styles/global-css-settings";
 
 .divider {
-  @include theme-prop(background-color, layout-border-color);
+  background-color: var(--layout-border-color);
 }
 
 .divider.withoutMargin {
