--- a/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.scss
+++ b/src/components/MultiStepIndicator/__stories__/multiStepIndicator.stories.scss
@@ -34,8 +34,8 @@
     width: 400px;
     height: 80px;
     padding-bottom: 10px;
-    @include theme-prop(background-color, primary-background-color);
-    @include theme-prop(box-shadow, box-shadow-medium);
+    background-color: var(--primary-background-color);
+    box-shadow: var(--box-shadow-medium);
   }
 
   &_box-wrapper {
