--- a/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
+++ b/src/components/ProgressBars/LinearProgressBar/LinearProgressBar.module.scss
@@ -47,6 +47,6 @@
 .container {
   position: relative;
   width: 100%;
-  @include theme-prop(background-color, primary-background-hover-color);
+  background-color: var(--primary-background-hover-color);
   border-radius: var(--border-radius-small);
 }
