--- a/src/components/Steps/StepsDot.module.scss
+++ b/src/components/Steps/StepsDot.module.scss
@@ -4,7 +4,7 @@
 @import "../../styles/states";
 
 @mixin active-step-dot {
-  @include theme-prop(background, primary-color);
+  background: var(--primary-color);
   transform: scale(1.3);
 }
 
@@ -14,7 +14,7 @@
   height: 6px;
   cursor: pointer;
   border-radius: 50%;
-  @include theme-prop(background, ui-border-color);
+  background: var(--ui-border-color);
   @include focus-style;
   transform-origin: center;
   transform: scale(1);
@@ -31,10 +31,10 @@
 }
 
 .onPrimary.dot {
-  @include theme-prop(background, primary-hover-color);
+  background: var(--primary-hover-color);
   @include focus-style-on-primary;
 }
 
 .onPrimary.isActive {
-  @include theme-prop(background, text-color-on-primary);
+  background: var(--text-color-on-primary);
 }
