--- a/src/components/Tabs/TabPanel/TabPanel.module.scss
+++ b/src/components/Tabs/TabPanel/TabPanel.module.scss
@@ -2,5 +2,5 @@
 @import "../../../styles/typography";
 
 .tabPanelWrapper {
-  @include theme-prop(color, primary-text-color);
+  color: var(--primary-text-color);
 }
