--- a/src/components/Tabs/TabsContext/__stories__/tabsContext.stories.scss
+++ b/src/components/Tabs/TabsContext/__stories__/tabsContext.stories.scss
@@ -10,7 +10,7 @@
       height: 100%;
 
       padding: 8px;
-      @include theme-prop(background-color, primary-background-hover-color);
+      background-color: var(--primary-background-hover-color);
     }
   }
 }
