--- a/src/components/TextWithHighlight/TextWithHighlight.module.scss
+++ b/src/components/TextWithHighlight/TextWithHighlight.module.scss
@@ -8,8 +8,8 @@
 }
 
 .textWithHighlightWrapper em.highlightText {
-  @include theme-prop(background-color, primary-selected-color);
-  @include theme-prop(color, primary-text-color);
+  background-color: var(--primary-selected-color);
+  color: var(--primary-text-color);
   border-radius: 2px;
 }
 
