--- a/src/components/Toast/Toast.module.scss
+++ b/src/components/Toast/Toast.module.scss
@@ -48,15 +48,15 @@
 }
 
 .typeNormal {
-  @include theme-prop(background-color, primary-color);
+  background-color: var(--primary-color);
 }
 
 .typePositive {
-  @include theme-prop(background-color, positive-color);
+  background-color: var(--positive-color);
 }
 
 .typeNegative {
-  @include theme-prop(background-color, negative-color);
+  background-color: var(--negative-color);
 }
 
 // Animation
