--- a/src/components/Toast/ToastLink/ToastLink.module.scss
+++ b/src/components/Toast/ToastLink/ToastLink.module.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/themes";
 
 .actionLink {
-  @include theme-prop(color, text-color-on-primary);
+  color: var(--text-color-on-primary);
   -webkit-font-smoothing: auto;
   -moz-osx-font-smoothing: auto;
 }
