--- a/src/storybook/stand-alone-documentaion/welcome/ability-description/ability-description.scss
+++ b/src/storybook/stand-alone-documentaion/welcome/ability-description/ability-description.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   border: 1px solid;
-  @include theme-prop(border-color, layout-border-color);
+  border-color: var(--layout-border-color);
   padding: var(--spacing-large);
   width: 100%;
   &_image {
