--- a/src/storybook/styles/mixins.scss
+++ b/src/storybook/styles/mixins.scss
@@ -4,5 +4,5 @@
 @mixin frame() {
   border: var(--layout-border-color) 1px solid;
   border-radius: var(--border-radius-medium);
-  @include theme-prop(border-color, layout-border-color);
+  border-color: var(--layout-border-color);
 }
