--- a/src/components/Text/__stories__/Text.stories.module.scss
+++ b/src/components/Text/__stories__/Text.stories.module.scss
@@ -1,15 +1,22 @@
 @import "../../../styles/themes";
 
-@mixin color-rectangle-example {
-  width: 150px;
+@mixin spacing {
   padding: var(--spacing-small);
 }
 .primaryBackground {
-  @include color-rectangle-example;
+  @include spacing;
   background-color: var(--primary-color);
 }
 
 .invertedBackground {
-  @include color-rectangle-example;
+  @include spacing;
   background-color: var(--inverted-color-background);
+}
+
+.smallRectangle {
+  width: 150px;
+}
+
+.mediumRectangle {
+  width: 420px;
 }
